--- a/card.css
+++ b/card.css
@@ -1,4 +1,29 @@
 body {
     background-color: #ccc;
     font-family: Helvetica, sans-serif;
+    color: #222;
+    margin-top: 100px;
+}
+
+img {
+    width: 100%;
+}
+
+.card {
+    background-color: #f3f3f3;
+    border-radius: 15px;
+    margin: 0 auto;
+    width: 400px; 
+    text-align: center;
+}
+
+.card .avatar {
+    width: 100px;
+    border-radius: 50%;
+    margin-top: -50px;
+}
+
+.contacts {
+    margin: 0;
+    padding: 0;
 }
